features page select box alignment fixed

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -189,12 +189,102 @@ input[type="password"] {
 	margin: 13px 5px !important;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+/* Safari 3.0 and Opera 9 rules here */
+	.feature select {
+		margin-left: 15px;
+	    margin-top: 4px;
+		width: 73px !important;
+	}
+	
+	.scopeList {
+		float: right !important;
+		line-height : 20px !important;
+		padding: 0 !important;
+		margin: 2px 20px 0 0 !important;
+	}
+	
+	.defaultScope {
+		float: right !important;
+		line-height : 20px !important;
+		padding: 0 !important;
+		margin: 2px 36px 0 0 !important;
+	}	
+	.scopeGearCrossList {
+		float: right !important;
+		line-height : 20px !important;
+		padding: 0 !important;
+		margin: 2px 20px 0 0 !important;
+	}
+	
+	.scopeGearList {
+		float: right !important;
+		line-height : 20px !important;
+		padding: 0 !important;
+		margin: 2px 5px 0 0 !important;
+	}
+	
+	.gear {
+		margin-right: 15px !important;
+		float: right !important;
+	}	
+	
+	.gearWithCross {
+		float: right !important;
+	}
+	
+	.crossImg {
+		float: right !important;
+	}	
+	
+}
+
+
 .feature select {
 	margin-left: 15px;
     margin-top: 4px;
-	width: 100px;
+	width: 73px !important;
 }
 
+.scopeList {
+	float: right !important;
+	height: 25px !important;
+	padding: 0 !important;
+	margin: 2px 20px 0 0 !important;
+}
+
+.defaultScope {
+	float: right !important;
+	height: 25px !important;
+	padding: 0 !important;
+	margin: 2px 36px 0 0 !important;
+}	
+.scopeGearCrossList {
+	float: right !important;
+	height: 25px !important;
+	padding: 0 !important;
+	margin: 2px 20px 0 0 !important;
+}
+
+.scopeGearList {
+	float: right !important;
+	height: 25px !important;
+	padding: 0 !important;
+	margin: 2px 5px 0 0 !important;
+}
+
+.gear {
+	margin-right: 15px !important;
+	float: right !important;
+}	
+
+.gearWithCross {
+	float: right !important;
+}
+
+.crossImg {
+	float: right !important;
+}	
 .featureImage {
 	float: right;
     margin: -30px -6px -21px;
